<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/panelItemBottomNav"
        android:icon="@drawable/edit_white"
        android:title="@string/panel"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/catalogCategoriesItemBottomNav"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/catalogCategories"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/catalogProductsItemBottomNav"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/catalogFilms"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/catalogClothesItemBottomNav"
        android:icon="@android:drawable/star_on"
        android:title="@string/catalogActionMovie"
        app:showAsAction="ifRoom"/>

</menu>