<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".tabs.TabPanel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textColor="@color/orange"
                android:text="@string/addCategory"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddCategoryClothes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerAddCategory"
                android:layout_marginTop="20dp"
                android:text="@string/catalogActionMovie"
                android:background="@color/orange"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddCategoryShoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/buttonAddCategoryClothes"
                android:layout_marginTop="10dp"
                android:text="@string/shoes"
                android:background="@color/orange"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddCategoryAccessories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/buttonAddCategoryShoes"
                android:layout_marginTop="10dp"
                android:text="@string/accessories"
                android:background="@color/orange"
                android:textColor="@color/black"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerAddFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/buttonAddCategoryAccessories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp"
                android:textColor="@color/orange"
                android:text="@string/addFilm"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEnterNameFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerAddFilm"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@android:color/white"
                app:startIconTint="@android:color/white"
                app:endIconTint="@android:color/holo_red_light"
                android:hint="@string/labelEnterNameFilm"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@android:drawable/ic_dialog_dialer"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterNameFilm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEnterCategoryFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionEnterNameFilm"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@android:color/white"
                app:startIconTint="@android:color/black"
                app:endIconTint="@android:color/holo_red_light"
                android:hint="@string/labelEnterCategory"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@android:drawable/ic_menu_slideshow"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterCategoryFilm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEnterDurationFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionEnterCategoryFilm"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@android:color/white"
                app:startIconTint="@android:color/white"
                app:endIconTint="@android:color/holo_red_light"
                android:hint="@string/labelEnterDurationFilm"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@android:drawable/presence_away"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterDurationFilm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor"/>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/sectionResEnterFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionEnterDurationFilm"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEnterNameFilm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/orange"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEnterCategoryFilm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/orange"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEnterDurationFilm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/orange"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionResEnterFilm"
                android:layout_marginTop="20dp"
                android:text="@string/addFilm"
                android:background="@color/orange"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>